fix optional info spacing issue

--- a/foundation_cms/static/scss/blocks/themes/default/product_review_section.scss
+++ b/foundation_cms/static/scss/blocks/themes/default/product_review_section.scss
@@ -67,6 +67,8 @@
   }
 
   &__additional-info {
-    @include item-padding-y(top);
+   > p {
+      margin-bottom: 0;
+    }
   }
 }
